maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: ';' expected but '=' found.
		Xo:Int=x
                      ^JediEscaper:10: error: ';' expected but '=' found.
		Yo:Int=y
                      ^